# shield_utils

./: .gitignore  CMakeLists.txt
modulefiles/: shieldutils_common.lua  shieldutils_gaeac5.intel.lua  shieldutils_gaeac6.intel.lua  shieldutils_hera.intel.lua  shieldutils_ursa.intel.lua
src/: CMakeLists.txt
src/cube2gaus.fd/: README.md
src/cube2gaus.fd/python/: fake_da_gen.py  gaus_N192.nc  gaus_N192.nc_32bit  gaus_N384.nc  gaus_N384.nc_32bit  gaus_N768.nc  gaus_N768.nc_32bit  gauss_gen.py  gauss_grid.py
src/cube2gaus.fd/scripts/: gaussian_c2g_atms.sh  gaussian_c2g_atmsfcst.sh  gaussian_sfcanl.sh  gaussian_sfcfcst.sh  gaussian_sfcfcst_scalar.sh  run_c2g_atmsfcst.sh  run_sfcanl.sh  run_sfcfcst.sh
src/cube2gaus.fd/src/: CMakeLists.txt  main.F90
src/cube2gaus.fd/src/lib/: fv3_da_out_api.F90
src/cube2gaus.fd/src/lib/c2l/: affinity.c  cub2latlon.F90  fv_timing.F90
src/cube2gaus.fd/src/lib/core/: fv3_da.F90  fv3_da_ctrl.F90  interp_res_ncio.F90  interp_res_nemsio.F90
src/cube2gaus.fd/src/lib/util/: io_nc_util.F90
src/gaussian_sfcanl.fd/: CMakeLists.txt  gaussian_sfcanl.f90
src/gaussian_sfcanl.fd/weight_gen/scrip.fd/: CMakeLists.txt  scrip.f90
src/gaussian_sfcfcst.fd/: CMakeLists.txt  gaussian_sfcfcst.f90
src/gaussian_sfcfcst.fd/gaussian_sfcfcst_scalar/: Makefile  gaussian_sfcfcst_scalar_intrp.f90  makefile.sh
test/: gaussian_c2g_atms.sh  run_c2g_atmsfcst.sh
ush/: build.sh  cube2gaussian.sh  detect_machine.sh  gaussian_c2g_atms.sh  gaussian_sfcanl.sh  gaussian_sfcfcst.sh  gaussian_sfcfcst_nodiagvar.sh  gaussian_sfcfcst_scalar.sh  module-setup.sh
